# superneuromat

./: .gitignore  .readthedocs.yaml  README.md  __init__.py  neuromorphicmodel.py  pyproject.toml  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: draft-release.yml  pages-build.yaml  pypi-release.yml  python-publish.yml  test.yaml
docs/: .gitignore  Makefile  README.md  citation.rst  conf.py  development.rst  index.rst  installation.rst  make.bat  modules.rst  requirements.txt  single  single.bat  superneuromat.rst
docs/_build/doctrees/: citation.doctree  development.doctree  environment.pickle  index.doctree  installation.doctree  modules.doctree  src.doctree  superneuromat.doctree  usage.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  citation.html  development.html  genindex.html  index.html  installation.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  src.html  superneuromat.html  usage.html
docs/_build/html/_modules/: index.html  superneuromat.html
docs/_build/html/_modules/src/: superneuromat.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  src.rst.txt  superneuromat.rst.txt  usage.rst.txt
docs/_build/latex/: superneuromat.aux  superneuromat.fdb_latexmk  superneuromat.fls  superneuromat.idx  superneuromat.ilg  superneuromat.ind  superneuromat.out  superneuromat.tex  superneuromat.toc
docs/source/: conf.py  index.rst  modules.rst  superneuromat.rst
docs/source/_static/css/: custom.css
docs/source/_templates/: last-updated.html
docs/source/api/: Neuron.rst  NeuronListView.rst  SNN.rst  Synapse.rst  SynapseListView.rst  accessor_classes.NeuronList.rst  accessor_classes.SynapseList.rst  index.rst
docs/source/devel/: index.rst  install.rst
docs/source/guide/: cite_snm.rst  cites_snm.rst  firstrun.rst  index.rst  install-wsl.rst  install.rst  managing_state.rst  migration2.rst  speed.rst
docs/source/includeroot/schema/0.1/: snn.json
docs/source/schema/0.1.0/: snn.json
experiments/: 20221213-superneuromat_results.csv  superneuromat_results.csv  superneuromat_results_brunton.csv  test.py
src/: frontier.c
src/superneuromat/: __init__.py  a.out  accessor_classes.py  frontier.c  json.py  my_fifo_c.c  my_fifo_py.py  neuromorphicmodel.py  numba_jit.py  test_openmp.c  util.py
src/superneuromat/frontier/: __init__.py  frontier_backend.py
src/superneuromat/gpu/: cuda.py
superneuromat/: neuromorphicmodel.py
tests/: .gitignore  base.py  stdp_test.py  test-deletion.ipynb  test_count_spikes.py  test_cpu.py  test_deletion.py  test_df.py  test_display.py  test_dtype.py  test_errors.py  test_fpga.py  test_frontier.py  test_gpu.py  test_jit.py  test_json.py  test_leak.py  test_logic_gates.py  test_neuron.py  test_refractory.py  test_reset.py  test_sparse.py  test_spikes.py  test_stdp.py  test_synapse.py
