[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superneuromat"
version = "2.0.1"
authors = [
	{name="Prasanna Date"}, 
	{name="Chathika Gunaratne"}, 
	{name="Shruti Kulkarni"}, 
	{name="Robert Patton"}, 
	{name="Mark Coletti"}
]
description = "A fast and scalable matrix-based simulator for spiking neural networks (SNNs)."
readme = "README.md"
requires-python = ">=3.0"
dependencies = [
	"numpy",
	"scipy",
	"pandas",
]
classifiers = [
	"Programming Language :: Python :: 3",
	"Programming Language :: C",
	"License :: OSI Approved :: BSD License",
	"Operating System :: OS Independent",
	"Development Status :: 5 - Production/Stable",
	"License :: OSI Approved :: BSD License",
	"Topic :: Scientific/Engineering",
	"Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.license]
file = "LICENSE"

[project.urls]
Homepage = "https://github.com/ORNL/superneuromat"
Issues = "https://github.com/ORNL/superneuromat/issues"
Documentation = "https://app.readthedocs.org/projects/superneuromat/"