[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superneuromat"
version = "2.0.1"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy"
]
authors = [
    {name="Prasanna Date", email="datepa@ornl.gov"},
    {name="Chathika Gunaratne"},
    {name="Shruti Kulkarni"},
    {name="Robert Patton"},
    {name="Mark Coletti"},
]
maintainers = [{name="Prasanna Date", email="datepa@ornl.gov"}]
readme = {file = "README.md", content-type = "text/markdown"}
description = "A fast and scalable matrix-based simulator for Spiking Neural Networks (SNNs)."
keywords = [
    "Neuromorphic Computing",
    "Neuromorphic Simulator",
    "Neuromorphic Algorithms",
    "Fast Neuromorphic Simulator",
    "Matrix-Based Neuromorphic Simulator",
    "Numpy Neuromorphic Simulator",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.license]
file = "LICENSE"

[project.urls]
    url = "https://github.com/ORNL/superneuromat"
    Repository = "https://github.com/ORNL/superneuromat"
    Download = "https://pypi.org/project/ini2toml/#files"

[project.optional-dependencies]
jit = [
    "numba~=0.61.0"
]
gpu = [
    "numba-cuda",
    "numba~=0.61.0",
    "numpy<2.2.0"
]
docs = [
    "pydata-sphinx-theme~=0.16.1",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinx-design",
    "numpydoc",
    "myst-parser",
]
