[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "superneuromat"
version = "3.1.0"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24.0",
    "scipy"
]
authors = [
    {name="Prasanna Date", email="datepa@ornl.gov"},
    {name="Chathika Gunaratne"},
    {name="Shruti Kulkarni"},
    {name="Robert Patton"},
    {name="Mark Coletti"},
]
maintainers = [{name="Prasanna Date", email="datepa@ornl.gov"}]
readme = {file = "README.md", content-type = "text/markdown"}
description = "A fast and scalable matrix-based simulator for Spiking Neural Networks (SNNs)."
keywords = [
    "Neuromorphic Computing",
    "Neuromorphic Simulator",
    "Neuromorphic Algorithms",
    "Fast Neuromorphic Simulator",
    "Matrix-Based Neuromorphic Simulator",
    "Numpy Neuromorphic Simulator",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: C",
    "License :: OSI Approved :: BSD License",
    "Development Status :: 3 - Alpha",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.license]
file = "LICENSE"

[project.urls]
    url = "https://github.com/ORNL/superneuromat"
    Repository = "https://github.com/ORNL/superneuromat"
    Download = "https://pypi.org/project/ini2toml/#files"

[project.optional-dependencies]
jit = [
    "numba"
]
cuda = [
    "numba-cuda",
    "numba~=0.61.0",
    "numpy<2.2.0"
]
docs = [
    "pydata-sphinx-theme~=0.16.1",
    "sphinx",
    "sphinx-autodoc-typehints",
    "sphinx-copybutton",
    "sphinx-togglebutton",
    "sphinx-design",
    "numpydoc",
    "myst-parser",
]

#
# Environment Testing
#

[tool.tox]
env_list = [
    'py39',
    # 'jit_py39',
    'py313',
    'pandas',
    'jit',
    'numpy126',
    'numpy20',
]

[tool.tox.gh.python]
"3.9" = ['py39',]
"3.10" = ['py310',]
"3.13" = ['py313', 'pandas', 'jit']

[tool.tox.env_run_base]
description = "Run tests under {base_python}"
change_dir = "tests"
commands = [
    ["python", "test_cpu.py",],
    ["python", "test_neuron.py",],
    ["python", "test_synapse.py",],
    ["python", "test_spikes.py",],
    ["python", "test_sparse.py",],
    ["python", "test_display.py",],
    ["python", "test_reset.py",],
    ["python", "test_dtype.py",],
]

[tool.tox.env.jit]
description = "Run jit test"
base_python = ["python3.13"]
change_dir = "tests"
extras = ["jit"]
commands = [
    ["python", "test_cpu.py",],
    ["python", "test_jit.py",],
]

[tool.tox.env.jit_py39]
description = "Run jit test"
base_python = ["python3.9"]
change_dir = "tests"
extras = ["jit"]
commands = [
    ["python", "test_cpu.py",],
    ["python", "test_jit.py",],
]

[tool.tox.env.cuda]
description = "Run cuda test"
base_python = ["python3.13"]
change_dir = "tests"
extras = ["cuda"]
commands = [
    ["python", "test_cpu.py",],
    ["python", "test_jit.py",],
    ["python", "test_gpu.py",],
]

[tool.tox.env.pandas]
description = "Run tests for pandas"
base_python = ["python3.13"]
change_dir = "tests"
deps = ["pandas"]
commands = [

    ["python", "test_display.py",],
    ["python", "test_df.py",],
]

[tool.tox.env.numpy126]
description = "Run tests for numpy 1.26.0"
change_dir = "tests"
deps = ["numpy<2.0.0"]
# extras = ["jit"]
commands = [
    ["python", "test_cpu.py",],
    # ["python", "test_jit.py",],
    ["python", "test_neuron.py"],
    ["python", "test_synapse.py",],
    ["python", "test_sparse.py",],
    ["python", "test_display.py",],
    ["python", "test_reset.py",],
    ["python", "test_dtype.py",],
    ["python", "test_spikes.py",],
]

[tool.tox.env.numpy20]
description = "Run tests for numpy 2.0 for np.bool check"
change_dir = "tests"
deps = ["numpy~=2.0.0"]
commands = [
    ["python", "test_cpu.py",],
    ["python", "test_neuron.py"],
    ["python", "test_synapse.py",],
    ["python", "test_sparse.py",],
    ["python", "test_display.py",],
    ["python", "test_reset.py",],
    ["python", "test_dtype.py",],
    ["python", "test_spikes.py",],
]
